@@ -201,6 +201,22 @@
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_address### -->
 
+
+	<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+	<dt>
+		<label for="tx-srfeuserregister-pi1-house_no">###LABEL_HOUSE_NO### ###REQUIRED_HOUSE_NO###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_ERROR_FIELD_house_no### -->
+		<p class="tx-srfeuserregister-pi1-error">###EVAL_ERROR_FIELD_house_no###</p>
+		<!-- ###SUB_ERROR_FIELD_house_no### -->
+		<!-- ###SUB_REQUIRED_FIELD_house_no### -->
+		<p class="tx-srfeuserregister-pi1-error">###MISSING_HOUSE_NO###</p>
+		<!-- ###SUB_REQUIRED_FIELD_house_no### -->
+		<input id="tx-srfeuserregister-pi1-house_no" type="text" class="tx-srfeuserregister-pi1-text" size="20" maxlength="20" title="###TOOLTIP_HOUSE_NO###" name="###NAME_HOUSE_NO###" />
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_city### -->
 	<dt>
 		<label for="tx-srfeuserregister-pi1-city">###LABEL_CITY### ###REQUIRED_CITY###</label>
@@ -528,6 +544,11 @@
 <dt>###LABEL_ADDRESS###</dt>
 <dd>###FIELD_address###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_address### -->
+
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+<dt>###LABEL_HOUSE_NO###</dt>
+<dd>###FIELD_house_no###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
 
 <!-- ###SUB_INCLUDED_FIELD_city### -->
 <dt>###LABEL_CITY###</dt>
@@ -875,6 +896,21 @@ The user is informed that a message has been sent to his email address and that 
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_address### -->
 
+	<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+	<dt>
+		<label for="tx-srfeuserregister-pi1-house_no">###LABEL_HOUSE_NO### ###REQUIRED_HOUSE_NO###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_ERROR_FIELD_house_no### -->
+		<p class="tx-srfeuserregister-pi1-error">###EVAL_ERROR_FIELD_house_no###</p>
+		<!-- ###SUB_ERROR_FIELD_house_no### -->
+		<!-- ###SUB_REQUIRED_FIELD_house_no### -->
+		<p class="tx-srfeuserregister-pi1-error">###MISSING_HOUSE_NO###</p>
+		<!-- ###SUB_REQUIRED_FIELD_house_no### -->
+		<input id="tx-srfeuserregister-pi1-house_no" type="text" class="tx-srfeuserregister-pi1-text" size="40" maxlength="60" title="###TOOLTIP_INVITATION_HOUSE_NO###" name="###NAME_HOUSE_NO###" />
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_city### -->
 	<dt>
 		<label for="tx-srfeuserregister-pi1-city">###LABEL_CITY### ###REQUIRED_CITY###</label>
@@ -1175,6 +1211,11 @@ The user is informed that a message has been sent to his email address and that 
 <dd>###FIELD_address###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_address### -->
 
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+<dt>###LABEL_HOUSE_NO###</dt>
+<dd>###FIELD_house_no###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+
 <!-- ###SUB_INCLUDED_FIELD_city### -->
 <dt>###LABEL_CITY###</dt>
 <dd>###FIELD_city###&nbsp;</dd>
@@ -1459,6 +1500,21 @@ The user is informed that a message has been sent to the email address and that 
 		<input id="tx-srfeuserregister-pi1-address" type="text" class="tx-srfeuserregister-pi1-text" size="40" maxlength="60" title="###TOOLTIP_ADDRESS###" name="###NAME_ADDRESS###" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_address### -->
+
+	<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+	<dt>
+		<label for="tx-srfeuserregister-pi1-address">###LABEL_HOUSE_NO### ###REQUIRED_HOUSE_NO###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_ERROR_FIELD_house_no### -->
+		<p class="tx-srfeuserregister-pi1-error">###EVAL_ERROR_FIELD_house_no###</p>
+		<!-- ###SUB_ERROR_FIELD_house_no### -->
+		<!-- ###SUB_REQUIRED_FIELD_house_no### -->
+		<p class="tx-srfeuserregister-pi1-error">###MISSING_HOUSE_NO###</p>
+		<!-- ###SUB_REQUIRED_FIELD_house_no### -->
+		<input id="tx-srfeuserregister-pi1-house_no" type="text" class="tx-srfeuserregister-pi1-text" size="40" maxlength="60" title="###TOOLTIP_HOUSE_NO###" name="###NAME_HOUSE_NO###" />
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_house_no### -->
 
 	<!-- ###SUB_INCLUDED_FIELD_city### -->
 	<dt>
@@ -1790,6 +1846,11 @@ The user is informed that a message has been sent to the email address and that 
 <dt> ###LABEL_ADDRESS###</dt>
 <dd> ###FIELD_address###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_address### -->
+
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+<dt> ###LABEL_HOUSE_NO###</dt>
+<dd> ###FIELD_house_no###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
 
 <!-- ###SUB_INCLUDED_FIELD_city### -->
 <dt> ###LABEL_CITY###</dt>
@@ -2188,6 +2249,8 @@ The user is informed that a message has been sent to the email address and that 
 
 ###LABEL_COMPANY### ###FIELD_company###
 ###LABEL_ADDRESS### ###FIELD_address###
+###LABEL_HOUSE_NO### ###FIELD_house_no###
+
 ###LABEL_ZIP### ###FIELD_zip###
 ###LABEL_CITY### ###FIELD_city###
 
@@ -2267,6 +2330,7 @@ The user is informed that a message has been sent to the email address and that 
 
 ###LABEL_COMPANY### ###FIELD_company###
 ###LABEL_ADDRESS### ###FIELD_address###
+###LABEL_HOUSE_NO### ###FIELD_house_no###
 
 ###LABEL_ZIP### ###FIELD_zip###
 ###LABEL_CITY### ###FIELD_city###
@@ -2518,6 +2582,11 @@ The user is informed that a message has been sent to the email address and that 
 <dd>###FIELD_address###</dd>
 <!-- ###SUB_INCLUDED_FIELD_address### -->
 
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+<dt>###LABEL_HOUSE_NO###</dt>
+<dd>###FIELD_house_no###</dd>
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->
+
 <!-- ###SUB_INCLUDED_FIELD_city### -->
 <dt>###LABEL_CITY###</dt>
 <dd>###FIELD_city###</dd>
@@ -2634,6 +2703,7 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_title### -->###LABEL_TITLE### ###FIELD_title###<!-- ###SUB_INCLUDED_FIELD_title### -->
 <!-- ###SUB_INCLUDED_FIELD_company### -->###LABEL_COMPANY### ###FIELD_company### <!-- ###SUB_INCLUDED_FIELD_company### -->
 <!-- ###SUB_INCLUDED_FIELD_address### -->###LABEL_ADDRESS### ###FIELD_address###<!-- ###SUB_INCLUDED_FIELD_address### -->
+<!-- ###SUB_INCLUDED_FIELD_house_no### -->###LABEL_HOUSE_NO### ###FIELD_house_no###<!-- ###SUB_INCLUDED_FIELD_house_no### -->
 <!-- ###SUB_INCLUDED_FIELD_city### -->###LABEL_CITY### ###FIELD_city###<!-- ###SUB_INCLUDED_FIELD_city### -->
 <!-- ###SUB_INCLUDED_FIELD_zone### -->###LABEL_ZONE### ###FIELD_zone###<!-- ###SUB_INCLUDED_FIELD_zone### -->
 <!-- ###SUB_INCLUDED_FIELD_country### -->###LABEL_COUNTRY### ###FIELD_country###<!-- ###SUB_INCLUDED_FIELD_country### -->
